# generic-node-se

./: .clabot  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE.md  License.md  README.md
Software/: CMakeLists.txt  Dockerfile  README.md  bootloader_app_merge.py  cross.cmake  linker.ld
Software/app/: README.md  app.h  app_conf.h
Software/app/app_common/: GNSE_app_helper.c  GNSE_app_helper.h
Software/app/app_template/: .cproject  .project  CMakeLists.txt  README.md  main.c  stm32wlxx_it.c
Software/app/app_template/conf/: app_conf.h
Software/app/basic/: .cproject  .project  CMakeLists.txt  README.md  basic_battery.c  basic_gpio.c  basic_se_flash.c  basic_sensor.c  main.c  main.h  stm32wlxx_it.c
Software/app/basic/conf/: app_conf.h
Software/app/basic_azurertos/: .cproject  .project  CMakeLists.txt  README.md  main.c  stm32wlxx_it.c
Software/app/basic_azurertos/conf/: app_conf.h
Software/app/basic_bootloader/: .cproject  .project  CMakeLists.txt  README.md  bootloader.c  bootloader.h  main.c  memory_map.h  stm32wlxx_it.c
Software/app/basic_bootloader/conf/: app_conf.h
Software/app/basic_freertos/: .cproject  .project  CMakeLists.txt  README.md  app_freertos.c  main.c  stm32wlxx_hal_timebase_tim.c  stm32wlxx_it.c  stm32wlxx_it.h
Software/app/basic_freertos/conf/: FreeRTOSConfig.h  app_conf.h
Software/app/basic_fuota/: .cproject  .project  CMakeLists.txt  README.md  lora_app.c  lora_app.h  lora_info.c  lora_info.h  main.c  stm32wlxx_it.c
Software/app/basic_fuota/conf/: app_conf.h  lorawan_conf.h
Software/app/basic_lorawan/: .cproject  .project  CMakeLists.txt  Commissioning.h  README.md  basic_lorawan.h  lora_app.c  lora_app.h  lora_info.c  main.c  stm32wlxx_it.c  sys_app.c  sys_app.h
Software/app/basic_lorawan/conf/: Commissioning.h  app_conf.h  lorawan_conf.h  mw_log_conf.h  radio_conf.h  se-identity.h
Software/app/basic_lorawan/lib_dependency/: subghz.h
Software/app/cert_lorawan/: .cproject  .project  CMakeLists.txt  lora_app.c  lora_app_version.h  lora_at.c  lora_at.h  lora_command.c  lora_command.h  main.c  sys_app.c  test_rf.c  test_rf.h
Software/app/cert_lorawan/conf/: app_conf.h  radio_conf.h
Software/app/conf/: lorawan_keys.def.h
Software/app/freefall_lorawan/: .cproject  .project  CMakeLists.txt  README.md  freefall.c  freefall.h  lora_app.c  lora_app.h  stm32wlxx_it.c  stm32wlxx_it.h  sys_app.c  sys_app.h
Software/app/freefall_lorawan/conf/: Commissioning.h  app_conf.h  lorawan_conf.h  radio_conf.h  se-identity.h
Software/app/freefall_lorawan/lib_dependency/: subghz.h  timer.h
Software/app/freertos_lorawan/: CMakeLists.txt  README.md  classa_task.c  main.c  stm32wlxx_it.c  stm32wlxx_it.h  sys_app.c  sys_app.h
Software/app/freertos_lorawan/conf/: Commissioning.h  FreeRTOSConfig.h  app_conf.h  lorawan_conf.h  mw_log_conf.h  radio_conf.h  se-identity.h
Software/app/secure_element_lorawan/: .cproject  .project  CMakeLists.txt  README.md  lora_app.c  lora_app.h  sensors.c  sensors.h  stm32wlxx_it.c  stm32wlxx_it.h  sys_app.c  sys_app.h
Software/app/secure_element_lorawan/conf/: app_conf.h
Software/app/secure_element_lorawan/lib_dependency/: Commissioning.h  timer.h
Software/app/sensors_lorawan/: .cproject  .project  CMakeLists.txt  README.md  lora_app.c  main.c  sensors.c  sensors.h  stm32wlxx_it.h  sys_app.c  sys_app.h
Software/app/sensors_lorawan_se/: .cproject  .project  CMakeLists.txt  README.md  lora_app.c  lora_app.h  main.c  sensors.c  sensors.h  stm32wlxx_it.c  stm32wlxx_it.h  sys_app.c  sys_app.h
Software/components/: stm32wlxx_hal_msp_template.c  stm32wlxx_hal_timebase_rtc_alarm_template.c  stm32wlxx_hal_timebase_rtc_wakeup_template.c  stm32wlxx_hal_timebase_tim_template.c
Software/lib/: README.md  node_bsp.c  node_bsp.h
Software/lib/ATECC608A-TNGLORA/: atca_config.h  atecc608a-tnglora-se-hal.c  atecc608a-tnglora-se-hal.h  atecc608a-tnglora-se.c  hal_LoraMacNode.c  se-identity.h  tnglora_read_helper.c  tnglora_read_helper.h
Software/lib/BSP/: STNODE_bsp.c  STNODE_bsp.h
Software/lib/BUZZER/: BUZZER.c  BUZZER.h
Software/lib/FreeRTOS-LoRaWAN/: credentials.c  freertos_lorawan.c  freertos_lorawan.h  timer.c
Software/lib/GNSE_BSP/: GNSE_bsp.h  GNSE_bsp_clk_timer.c  GNSE_bsp_clk_timer.h  GNSE_bsp_conf.h  GNSE_bsp_error.h  GNSE_bsp_gpio.c  GNSE_bsp_gpio.h  GNSE_bsp_radio.c  GNSE_bsp_radio.h  GNSE_bsp_serial.c  GNSE_bsp_serial.h  GNSE_msp.c
Software/lib/GNSE_HAL/: GNSE_acc.c  GNSE_acc.h  GNSE_bm.c  GNSE_bm.h  GNSE_clk.c  GNSE_clk.h  GNSE_error.c  GNSE_error.h  GNSE_flash.c  GNSE_flash.h  GNSE_hal.c  GNSE_hal.h  GNSE_lpm.c  GNSE_lpm.h  GNSE_rtc.c  GNSE_rtc.h
Software/lib/GNSE_TRACER/: GNSE_tracer.h
Software/lib/LIS2DH12/: LIS2DH12.c  LIS2DH12.h  st_hw_i2c_implementation.c
Software/lib/MCU_FLASH/: MCU_FLASH.c  MCU_FLASH.h
Software/lib/MX25R1635/: MX25R16.c  MX25R16.h  mx_define.h  mx_test.c  mx_test.h  mxic_hc.c  mxic_hc.h  nor_cmd.c  nor_cmd.h  nor_ops.c  nor_ops.h  spi.c  spi.h
Software/lib/SHTC3/: SHTC3.c  SHTC3.h  sensirion_common.c  sensirion_common.h  sensirion_hw_i2c_implementation.c  sensirion_i2c.h
Software/lib/SPIFFS/: spiffs_config.h
Software/lib/STM32WLxx_LoRaWAN/: README.md
Software/lib/STNODE_BSP/: STNODE_bsp.c  STNODE_bsp.h  STNODE_bsp_clk_timer.c  STNODE_bsp_clk_timer.h  STNODE_bsp_conf.h  STNODE_bsp_error.h  STNODE_bsp_gpio.c  STNODE_bsp_gpio.h  STNODE_bsp_radio.c  STNODE_bsp_radio.h  STNODE_bsp_serial.c  STNODE_bsp_serial.h  STNODE_msp.c  STNODE_radio.c  STNODE_radio.h
Software/lib/STNODE_HAL/: STNODE_lpm.c  STNODE_lpm.h  STNODE_rtc.c  STNODE_rtc.h
Software/lib/Utilities/: stm32_adv_trace.c  stm32_adv_trace.h  stm32_lpm.c  stm32_mem.h  stm32_seq.c  stm32_seq.h  stm32_systime.c  stm32_systime.h  stm32_tiny_vsnprintf.c  stm32_tiny_vsnprintf.h  usart_if.c  usart_if.h  utilities_conf.h
Software/lib/Utilities/freertos/: systime.h  (+7 more)
Software/tools/cmake_dev/: basic.CMakeLists.txt  basic_bootloader.CMakeLists.txt  basic_freertos.CMakeLists.txt  basic_lorawan.CMakeLists.txt  freefall_lorawan.CMakeLists.txt  freertos_lorawan.CMakeLists.txt  secure_element_lorawan.CMakeLists.txt
(+572 files in other folders)
