#-------------------
# Main elf
#-------------------
file(GLOB MAIN_SRC
    "${PROJECT_SOURCE_DIR}/app/basic_bootloader/*.c"
    "${PROJECT_SOURCE_DIR}/target/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_BSP/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_HAL/GNSE_flash.c"
    "${PROJECT_SOURCE_DIR}/lib/MCU_FLASH/*.c"
    "${PROJECT_SOURCE_DIR}/lib/Utilities/*.c"
    "${PROJECT_SOURCE_DIR}/lib/SPIFFS/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer/*.c"
    "${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf/*.c"
    "${PROJECT_SOURCE_DIR}/lib/SHTC3/*.c"
    "${PROJECT_SOURCE_DIR}/lib/MX25R1635/*.c"
    )
set(SOURCES
    ${MAIN_SRC}
    ${PROJECT_SOURCE_DIR}/${STARTUP_FILE}
    ${PROJECT_SOURCE_DIR}/${SYSTEM_FILE}
    )
add_executable(${PROJECT_NAME}.elf
    ${SOURCES}
    )
target_include_directories(${PROJECT_NAME}.elf
    PUBLIC
    ${PROJECT_SOURCE_DIR}/target
    ${PROJECT_SOURCE_DIR}/app
    ${PROJECT_SOURCE_DIR}/app/basic_bootloader
    ${PROJECT_SOURCE_DIR}/app/basic_bootloader/conf
    ${PROJECT_SOURCE_DIR}/lib/GNSE_BSP
    ${PROJECT_SOURCE_DIR}/lib/GNSE_HAL
    ${PROJECT_SOURCE_DIR}/lib/MCU_FLASH
    ${PROJECT_SOURCE_DIR}/lib/Utilities
    ${PROJECT_SOURCE_DIR}/lib/SPIFFS
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/adv_tracer
    ${PROJECT_SOURCE_DIR}/lib/GNSE_TRACER/tiny_printf
    ${PROJECT_SOURCE_DIR}/lib/SHTC3
    ${PROJECT_SOURCE_DIR}/lib/MX25R1635
    ${PROJECT_SOURCE_DIR}/lib/LIS2DH12
    ${PROJECT_SOURCE_DIR}/lib/BUZZER
    ${PROJECT_SOURCE_DIR}/lib/ATECC608A-TNGLORA
    )
target_link_libraries(${PROJECT_NAME}.elf
    PUBLIC
    hal
    )
target_compile_definitions(${PROJECT_NAME}.elf
    PUBLIC
    ${MCU}
    SEMIHOSTING=${SEMIHOSTING}
    )
    # Create output in hex and binary format
    create_bin_output(${PROJECT_NAME})
    create_hex_output(${PROJECT_NAME})
    # Add additional files to the make clean
    set_property(DIRECTORY PROPERTY ADDITIONAL_MAKE_CLEAN_FILES
    "${PROJECT_NAME}.map"
    "${PROJECT_NAME}.bin"
    "${PROJECT_NAME}.hex"
    )
